Refactor project for PostgreSQL support and rename application from "Demo" to "Geo"

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 
 # Configuración de la base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://uees.proyecto.postgresql/geodb
+spring.datasource.url=jdbc:postgresql://localhost:5432/geodb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
