--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,8 +25,8 @@ RUN grep version target/maven-archiver/pom.properties | cut -d '=' -f2 >.env-ver
 RUN grep artifactId target/maven-archiver/pom.properties | cut -d '=' -f2 >.env-id
 RUN mv target/$(cat .env-id)-$(cat .env-version).jar target/export-run-artifact.jar
 
-FROM registry.access.redhat.com/ubi8/openjdk-17-runtime:1.15-1.1682053056
+FROM openjdk:17-slim
 COPY --from=builder /home/jboss/project/target/export-run-artifact.jar  /deployments/export-run-artifact.jar
 EXPOSE 8081
-ENTRYPOINT ["/opt/jboss/container/java/run/run-java.sh", "--server.port=8081"]
+ENTRYPOINT ["java", "-jar", "/deployments/export-run-artifact.jar"]
 
