Refactor project: add Maven wrapper, update Dockerfile, and improve PostgreSQL configuration

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,15 @@
+# Stage 1: Build the application
 FROM maven:3-openjdk-17-slim AS builder
-
-# Build dependency offline to streamline build
-RUN mkdir project
 WORKDIR /app
-COPY pom.xml .
-RUN mvn dependency:go-offline
 
-COPY src src
-RUN mvn package -Dmaven.test.skip=true
-# compute the created jar name and put it in a known location to copy to the next layer.
-# If the user changes pom.xml to have a different version, or artifactId, this will find the jar
-RUN grep version target/maven-archiver/pom.properties | cut -d '=' -f2 >.env-version
-RUN grep artifactId target/maven-archiver/pom.properties | cut -d '=' -f2 >.env-id
-RUN mv target/$(cat .env-id)-$(cat .env-version).jar target/export-run-artifact.jar
+# Copy the project definition file
+COPY pom.xml .
+
+# Copy the source code
+COPY src ./src
+
+# Package the application
+RUN mvn package -DskipTests
 
 # Stage 2: Create the final image
 FROM openjdk:17-slim
@@ -23,13 +20,10 @@ WORKDIR /app
 RUN mkdir /log /config
 
 # Copy the JAR file from the builder stage
-COPY --from=builder /app/target/export-run-artifact.jar /app/export-run-artifact.jar
-
-# Copy the configuration files
-COPY config/ /config
+COPY --from=builder /app/target/geo-0.0.1-SNAPSHOT.jar /app/geo-0.0.1-SNAPSHOT.jar
 
 # Set environment variables
-ENV JAR=export-run-artifact.jar
+ENV JAR=geo-0.0.1-SNAPSHOT.jar
 ENV DEFAULT_OPTIONS="-Duser.timezone=America/Guayaquil -Djava.net.preferIPv4Stack=true -Djava.security.egd=file:/dev/./urandom"
 
 # Create the startup script
@@ -39,5 +33,3 @@ RUN echo '#!/bin/sh' > /app/start.sh && \
 
 # Define the entry point
 ENTRYPOINT ["/app/start.sh"]
-
-
