--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
-
-# Configuración de la base de datos PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/geodb
+spring.application.name=geo
+#DB
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/geodb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de JPA/Hibernate
+# JPA configuration
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
