--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=geo
 #DB
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://uees.proyecto.postgresql/geodb
+spring.datasource.url=jdbc:postgresql://postgresql.devops-uees-dev.svc.cluster.local:5432/geoglows
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
