--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 spring.application.name=geo
+server.port=8081
 #DB
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/geodb
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/geoglows
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
