--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.application.name=geo
 server.port=8081
 #DB
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/geoglows
+spring.datasource.url=jdbc:postgresql://localhost:5432/geoglows
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
